...
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       android:layout_margin="10dp"
                       app:srcCompat="@mipmap/subject"/>

            <TextView
                    android:id="@+id/grade_subject"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/grade_subject_icon"
                      app:layout_constraintTop_toTopOf="@+id/grade_subject_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/grade_subject_icon"
                      android:layout_margin="10dp"
...
                       android:layout_height="20dp"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toBottomOf="@id/grade_subject_icon"
                       android:layout_margin="10dp"
                       app:srcCompat="@mipmap/professor"/>

            <TextView android:id="@+id/grade_teacher"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintStart_toEndOf="@+id/grade_teacher_icon"
                      app:layout_constraintTop_toTopOf="@+id/grade_teacher_icon"
                      app:layout_constraintBottom_toBottomOf="@+id/grade_teacher_icon"
                      android:layout_margin="10dp"
...
